--- a/upload/admin/view/template/catalog/product_form.twig
+++ b/upload/admin/view/template/catalog/product_form.twig
@@ -31,13 +31,13 @@
             <li class="nav-item"><a href="#tab-data" data-toggle="tab" class="nav-link">{{ tab_data }}</a></li>
             <li class="nav-item"><a href="#tab-links" data-toggle="tab" class="nav-link">{{ tab_links }}</a></li>
             {#<li class="nav-item"><a href="#tab-attribute" data-toggle="tab" class="nav-link">{{ tab_attribute }}</a></li>#}
-            {#<li class="nav-item"><a href="#tab-option" data-toggle="tab" class="nav-link">{{ tab_option }}</a></li>#}
+            <li class="nav-item"><a href="#tab-option" data-toggle="tab" class="nav-link">{{ tab_option }}</a></li>
             {#<li class="nav-item"><a href="#tab-recurring" data-toggle="tab" class="nav-link">{{ tab_recurring }}</a></li>#}
-            {#<li class="nav-item"><a href="#tab-discount" data-toggle="tab" class="nav-link">{{ tab_discount }}</a></li>#}
+         <li class="nav-item"><a href="#tab-discount" data-toggle="tab" class="nav-link">{{ tab_discount }}</a></li>
             {#zzz<li class="nav-item"><a href="#tab-special" data-toggle="tab" class="nav-link">{{ tab_special }}</a></li>#}
             <li class="nav-item"><a href="#tab-image" data-toggle="tab" class="nav-link">{{ tab_image }}</a></li>
             {#<li class="nav-item"><a href="#tab-reward" data-toggle="tab" class="nav-link">{{ tab_reward }}</a></li>#}
-            {#<li class="nav-item"><a href="#tab-seo" data-toggle="tab" class="nav-link">{{ tab_seo }}</a></li>#}
+            <li class="nav-item"><a href="#tab-seo" data-toggle="tab" class="nav-link">{{ tab_seo }}</a></li>
             {#<li class="nav-item"><a href="#tab-design" data-toggle="tab" class="nav-link">{{ tab_design }}</a></li>#}
           </ul>
           <div class="tab-content">
