--- a/upload/catalog/view/theme/default/template/account/login.twig
+++ b/upload/catalog/view/theme/default/template/account/login.twig
@@ -12,38 +12,31 @@
     <div class="alert alert-danger alert-dismissible"><i class="fas fa-exclamation-circle"></i> {{ error_warning }}</div>
   {% endif %}
   <div class="row">{{ column_left }}
-    <div id="content" class="col">{{ content_top }}
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card mb-3">
+    <div  class="col-8">
+    {{ content_top }}
+    
+              <div class="card ">
             <div class="card-body">
-              <h2>{{ text_new_customer }}</h2>
-              <p><strong>{{ text_register }}</strong></p>
-              <p>{{ text_register_account }}</p>
-              <a href="{{ register }}" class="btn btn-primary">{{ button_continue }}</a></div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="card mb-3">
-            <div class="card-body">
-              <h2>{{ text_returning_customer }}</h2>
+              <h1>Login</h1>
               <p><strong>{{ text_i_am_returning_customer }}</strong></p>
               <form action="{{ action }}" method="post" enctype="multipart/form-data">
-                <div class="form-group">
-                  <label class="col-form-label" for="input-email">{{ entry_email }}</label> <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" class="form-control"/>
+                <div class="form-group md-form">
+                  <label class=""col-form-label" for="input-email">{{ entry_email }}</label> <input type="text" name="email" value="{{ email }}" p="{{ entry_email }}" id="input-email" class="form-control"/>
                 </div>
-                <div class="form-group">
-                  <label class="col-form-label" for="input-password">{{ entry_password }}</label> <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control"/> <a href="{{ forgotten }}">{{ text_forgotten }}</a></div>
+                <div class="form-group md-form">
+                  <label class="" col-form-label" for="input-password">{{ entry_password }}</label> <input type="password" name="password" value="{{ password }}" p="{{ entry_password }}" id="input-password" class="form-control"/> <a href="{{ forgotten }}">{{ text_forgotten }}</a></div>
                 <button type="submit" class="btn btn-primary">{{ button_login }}</button>
                 {% if redirect %}
                   <input type="hidden" name="redirect" value="{{ redirect }}"/>
                 {% endif %}
               </form>
-            </div>
+        
           </div>
         </div>
-      </div>
+      
       {{ content_bottom }}</div>
-    {{ column_right }}</div>
-</div>
+<div class="col">
+    {{ column_right }}
+    </div>
+    </div>
 {{ footer }}
