--- a/upload/catalog/view/theme/default/template/account/register.twig
+++ b/upload/catalog/view/theme/default/template/account/register.twig
@@ -1,4 +1,5 @@
 {{ header }}
+
 <div id="account-register" class="container">
   <ul class="breadcrumb">
     {% for breadcrumb in breadcrumbs %}
@@ -30,8 +31,13 @@
       <p>{{ text_account_already }}</p>
       <hr>
       <form action="{{ action }}" method="post" enctype="multipart/form-data">
+       
+       <div class="">
+
         <fieldset id="account">
-          <legend>{{ text_your_details }}</legend>
+          <legend>Personal Details</legend>
+          <div class="col">
+
           <div class="md-form row required" style="display: {% if customer_groups|length > 1 %} block {% else %} none {% endif %};">
             <label class=""col-sm-2 col-form-label">{{ entry_customer_group }}</label>
             <div class="col-sm-10">{% for customer_group in customer_groups %}
@@ -229,9 +235,14 @@
               </div>
             {% endif %}
           {% endfor %}
+
+          </div>
+
+
         </fieldset>
         <fieldset>
-          <legend>{{ text_your_password }}</legend>
+          <legend>Password</legend>
+           <div class="col">
           <div class="md-form row required">
             <label class=""col-sm-2 col-form-label" for="input-password">{{ entry_password }}</label>
             
@@ -247,33 +258,41 @@
                 <div class="text-danger">{{ error_confirm }}</div>
               {% endif %} 
           </div>
+          </div>
         </fieldset>
         <fieldset>
-          <legend>{{ text_newsletter }}</legend>
+          <legend>Newsletter</legend>
+           <div class="col">
           <div class=" row">
-            <label class=""col-sm-2 col-form-label">{{ entry_newsletter }}</label>
+            
              {% if newsletter %}
-                <div class="custom-control custom-radio custom-control  ">
+                <div class="custom-control custom-radio  ">
                  <input type="radio" name="newsletter" value="1" class="custom-control custom-radio-input" checked="checked"/>
-                    <label class="custom-control-label"> {{ text_yes }}</label>
+                    <label class=""> {{ text_yes }}</label>
                 </div>
-                <div class="custom-control custom-radio custom-control  ">
+                <div class="custom-control custom-radio   ">
                   <input type="radio" name="newsletter" value="0" class="custom-control custom-radio-input"/>
                   <label>  {{ text_no }}</label>
                 </div>
               {% else %}
-                <div class="custom-control custom-radio custom-control  ">
+                <div class="custom-control custom-radio   ">
                   <input type="radio" name="newsletter" value="1" class="custom-control custom-radio-input"/>
-                  <label class="custom-control-label">  {{ text_yes }}</label>
+                  <label class="">  {{ text_yes }}</label>
                 </div>
-                <div class="custom-control custom-radio custom-control  ">
+                <div class="custom-control custom-radio ">
                   <input type="radio" name="newsletter" value="0" class="custom-control custom-radio-input" checked="checked"/>
-                    <label class="custom-control-label"> {{ text_no }}</label>
+                    <label class=""> {{ text_no }}</label>
                 </div>
               {% endif %}
             </div>
           </div>
+          </div>
+
         </fieldset>
+       
+
+       </div>
+
         {{ captcha }}
         {% if text_agree %}
           <div class="d-inline-block pt-2 pd-2 w-100">
@@ -301,7 +320,7 @@
   </div>
 
 </div>
-  <div class="col-4">
+  <div class="col">
     {{ column_right }}
     </div>
     </div>
