--- a/upload/catalog/view/theme/default/template/common/column_right.twig
+++ b/upload/catalog/view/theme/default/template/common/column_right.twig
@@ -1,7 +1,9 @@
 {% if modules %}
-<aside id="column-right" class="col-3 d-none d-md-block">
+<aside id="column-right" class="">
+<ul class="list-group">
   {% for module in modules %}
   {{ module }}
   {% endfor %}
+</ul>
 </aside>
 {% endif %}
