--- a/upload/catalog/view/theme/default/template/common/menu.twig
+++ b/upload/catalog/view/theme/default/template/common/menu.twig
@@ -1,14 +1,18 @@
-{% if categories %}
+  {% if categories %}
   <div class="container">
-    <nav id="menu" class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav id="menu" class="navbar navbar-expand-lg navbar-light bg-primary" style="padding:5px 5px;">
       <div id="category" class="d-block d-sm-block d-lg-none">{{ text_category }}</div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#narbar-menu"><i class="fas fa-bars"></i></button>
       <div class="collapse navbar-collapse" id="narbar-menu">
+
+
+      
         <ul class="navbar-nav">
           {% for category in categories %}
             {% if category.children %}
               <li class="nav-item dropdown"><a href="{{ category.href }}" class="nav-link dropdown-toggle" data-toggle="dropdown">{{ category.name }}</a>
-                <div class="dropdown-menu">
+               
+                <div class="dropdown-menu" >
                   <div class="dropdown-inner">
                     {% for children in category.children|batch(category.children|length / category.column|round(1, 'ceil')) %}
                       <ul class="list-unstyled">
