--- a/upload/catalog/view/theme/default/template/common/search.twig
+++ b/upload/catalog/view/theme/default/template/common/search.twig
@@ -1,8 +1,8 @@
 
-<div class="md-form input-group mb-3 " style="margin-top:0;">
+<div class="md-form input-group mb-3 " style="margin-top:10px;">
   <input type="text" value="{{ search }}" class="form-control form-control-lg" placeholder="{{ text_search }}"  aria-label="Recipient's username"
     aria-describedby="MaterialButton-addon2">
   <div class="input-group-append">
-    <button class="btn btn-md btn-secondary m-0 px-3" type="button" id="MaterialButton-addon2"><i class="fas fa-search"></i></button>
+    <button class="btn btn-md btn btn-success m-0 px-3" type="button" id="MaterialButton-addon2"><i class="fas fa-search"></i></button>
   </div>
 </div>
