--- a/upload/catalog/view/theme/default/template/extension/module/featured.twig
+++ b/upload/catalog/view/theme/default/template/extension/module/featured.twig
@@ -32,9 +32,9 @@
           {% endif %}
         </div>
         <div class="button-group">
-          <button type="button" onclick="cart.add('{{ product.product_id }}');"><i class="fas fa-shopping-cart"></i> <span class="d-none d-lg-inline">{{ button_cart }}</span></button>
-          <button type="button" data-toggle="tooltip" title="{{ button_wishlist }}" onclick="wishlist.add('{{ product.product_id }}');"><i class="fas fa-heart"></i></button>
-          <button type="button" data-toggle="tooltip" title="{{ button_compare }}" onclick="compare.add('{{ product.product_id }}');"><i class="fas fa-exchange-alt"></i></button>
+          <button type="button"  style="margin:0px;padding:px;" class="btn btn- " onclick="cart.add('{{ product.product_id }}');"><i class="fas fa-shopping-cart"></i> <span class="d-none d-lg-inline">{{ button_cart }}</span></button>
+          <button type="button" style="margin:0px;padding:px;" class="btn -light" data-toggle="tooltip" title="{{ button_wishlist }}" onclick="wishlist.add('{{ product.product_id }}');"><i class="fas fa-heart"></i></button>
+          <button type="button" style="margin:0px;padding:px;" class="btn -light" data-toggle="tooltip" title="{{ button_compare }}" onclick="compare.add('{{ product.product_id }}');"><i class="fas fa-exchange-alt"></i></button>
         </div>
       </div>
     </div>
