--- a/upload/catalog/view/theme/default/template/extension/module/slideshow.twig
+++ b/upload/catalog/view/theme/default/template/extension/module/slideshow.twig
@@ -1,8 +1,15 @@
 <div class="swiper-viewport">
   <div id="slideshow{{ module }}" class="swiper-container">
-    <div class="swiper-wrapper">
+    <div class="swiper-wrapper" class="blue-gradient color-block mb-3 mx-auto">
       {% for banner in banners %}
-        <div class="swiper-slide text-center">{% if banner.link %}<a href="{{ banner.link }}"><img src="{{ banner.image }}" alt="{{ banner.title }}" class="img-fluid"/></a>{% else %}<img src="{{ banner.image }}" alt="{{ banner.title }}" class="img-fluid" />{% endif %}</div>
+        <div class="swiper-slide text-center">
+        {% if banner.link %}
+        <a href="{{ banner.link }}"><img src="{{ banner.image }}" alt="{{ banner.title }}" class="img-fluid" style="width:100%;"/></a>
+        {% else %}
+        <img src="{{ banner.image }}" alt="{{ banner.title }}" class="img-fluid" style="width:100%;"/>
+        {% endif %}
+        
+        </div>
       {% endfor %}
     </div>
   </div>
